--- a/asset/scss/base/_common.scss
+++ b/asset/scss/base/_common.scss
@@ -1,12 +1,6 @@
 body {
-    // font-family: 'Pretendard';
-    // font-weight: 300;
-    // font-size: 1rem;
-    // line-height: 1.5;
-    // color: $main-black;
 
     &::-webkit-scrollbar {
-        // display: none;
         width: 8px;
         background: rgba(222, 222, 222, .75);
     }
@@ -24,7 +18,6 @@ body {
 .main {
     background: $main-color;
     z-index: 2;
-    // margin-bottom: 100vh;
     position: relative;
 }
 
@@ -51,6 +44,8 @@ body {
     transition: opacity 0.3s, visibility 0.3s;
     font-weight: 500;
 
+    @include desktop{font-size: 2.1vw;}
+
     &.on {
         opacity: 1;
         visibility: visible;
@@ -58,30 +53,44 @@ body {
 
     &.spell1 {
         left: 0.83rem;
+
+        @include desktop{left: 1.2rem;}
     }
 
     &.spell2 {
         left: 1.27rem;
+
+        @include desktop{left: 2rem;}
     }
 
     &.spell3 {
         left: 1.7rem;
+
+        @include desktop{left: 2.7rem;}
     }
 
     &.spell4 {
         left: 2.35rem;
+
+        @include desktop{left: 3.8rem;}
     }
 
     &.spell5 {
         left: 2.8rem;
+
+        @include desktop{left: 4.6rem;}
     }
 
     &.spell6 {
         left: 3.2rem;
+
+        @include desktop{left: 5.22rem;}
     }
 
     &.spell7 {
         left: 3.6rem;
+
+        @include desktop{left: 5.9rem;}
     }
 }
 
@@ -89,10 +98,115 @@ body {
     width: 100%;
     height: 100%;
     padding: 0 2vw;
+
+    @include mobile{
+        padding: 0 5vw;
+    }
 }
 
+.loding-page{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: #413B34;
+    z-index: 999;
+
+    .logo-text{
+        position: relative;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        padding: 1rem;
+        color: #ecece4;
+        font-size: 8.5rem;
+        text-transform: uppercase;
+        line-height: 0.975;
+        letter-spacing: 0.3rem;
+        z-index: 9;
+        box-sizing: border-box;
+        justify-content: center;
+        font-family: $En-font;
+
+        @include tablet{padding: 2rem;}
+        @include mobile{
+            display: none;
+        }
+
+        .t {
+            transform: translateX(47vw);
+        }
+
+        .fo {
+            transform: translate(-46vw, 55vh);
+            @include desktop{
+                transform: translate(-46vw, 76vh);
+            }
+        }
+
+        .lio {
+            transform: translateY(55vh);
+            @include desktop{
+                transform: translateY(76vh);
+            }
+        }
+    }
+    .m-logo-text{
+        display: none;
+        position: fixed;
+        justify-content: center;
+        width: 100%;
+        top: 50%;
+        transform: translateY(-50%);
+        padding: 0 3vw;
+        color: #ecece4;
+        font-size: 8.2rem;
+        text-transform: uppercase;
+        line-height: 0.975;
+        letter-spacing: 0.3rem;
+        z-index: 2;
+        // opacity: 0;
+
+        @include desktop{
+            display: none;
+        }
+        @include tablet{
+        display: none;
+        }
+        @include mobile{
+        display: flex;
+        }
+
+    }
+    .info-txt {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        color: #ecece4;
+        font-size: 0.8rem;
+        line-height: 1.2;
+        opacity: 1;
+        z-index: 1;
+        font-family: 'PP_Hatton';
+
+        @include desktop{
+            font-size: 1rem;
+        }
+        @include mobile{
+            font-size: 2rem;
+            line-height: 1.3;
+        }
+    }
+}
+
+
 .sc-title {
-    // text-align: center;
     display: flex;
     justify-content: stretch;
     align-items: center;
@@ -101,46 +215,45 @@ body {
     text-transform: uppercase;
     text-align: center;
     font-weight: 400;
-    // margin-bottom: 1vw;
     margin-bottom: 3rem;
     font-size: clamp(2rem, 2.16vw, 4rem);
     font-family: $En-font;
     letter-spacing: -0.07rem;
 
-    // font-size: 1.56rem;
+    @include tablet{
+        font-size: 2.5rem;
+    }
+    @include mobile{
+        margin-bottom: 8rem;
+        gap: 4vw;
+        font-size: 3rem;
+    }
+
     .dash {
         content: "";
         display: block;
-        // position: absolute;
         width: .06rem;
         height: 12vw;
-        // left: 0;
-        // top: 0;
-        // position: static;
-        // background: #000;
-        // opacity: .2;
+
+        @include tablet{
+            height: 16vw;
+        }
+        @include mobile{
+            height: 24vw;
+        }
+        
 
         .line{
             display: block;
             width: 1px;
-            height: 100%;
+            height: 0;
             background: #484036;
         }
     }
 
     .t-title{
         overflow: hidden;
-        // transform: translateY(-100%);
-        // opacity: 1;
     }
-
-    // .line{
-    //     display: block;
-    //     width: .06rem;
-    //     height: 12vw;
-    //     background: #212529;
-    //     opacity: 0.3;
-    // }
 }
 
 .btn {
