--- a/asset/scss/page/_main.scss
+++ b/asset/scss/page/_main.scss
@@ -1,6 +1,5 @@
 .sc-intro {
   height: 100vh;
-  // background-color: rgb(102, 102, 102);
 
   .video-wrap {
     width: 100%;
@@ -26,36 +25,68 @@
     align-items: center;
     height: 100%;
     text-align: center;
-    gap: 0.5rem;
-    
+    gap: 0.3rem;
+
+    @include desktop {
+      gap: 0.6rem;
+    }
+
     .work-tit {
-      // opacity: 0;
       font-size: 1.5rem;
       text-transform: uppercase;
-      font-weight: 500;
-      letter-spacing: -0.5px;
-      // width: 70%;
+      font-weight: 600;
       line-height: 1.25;
       overflow: hidden;
       font-family: $En-font;
-      // transition: opacity 0.3s;
+      letter-spacing: -0.5px;
+
+      @include desktop {
+        font-size: 1.8rem;
+      }
+
+      @include mobile {
+        font-size: 1.9rem;
+      }
     }
 
-    // .work-desc{opacity: 0;}
+    .work-tit2 {
+      font-size: 1.4rem;
+      font-weight: 500;
+      letter-spacing: -0.5px;
+      line-height: 1.25;
+      overflow: hidden;
+
+      @include desktop {
+        font-size: 1.7rem;
+      }
+
+      @include mobile {
+        font-size: 1.8rem;
+      }
+    }
+
+    .work-desc {
+      letter-spacing: -0.7px;
+      font-weight: 500;
+      /* line-height: 1.5; */
+      margin-top: 0.5rem;
+      color: #7e7e7e;
+      font-size: 1.1rem;
+
+      @include desktop {
+        font-size: 1.5rem;
+        margin-top: 1rem;
+        line-height: 1.7;
+      }
+
+      @include mobile {
+        font-size: 1.7rem;
+        margin-top: 0.8rem;
+      }
+    }
   }
 
-  // .work-desc{
-  //     // line-height: 0.8;
-  //     text-align: center;
-  //     letter-spacing: -0.2vw;
-  //     position: absolute;
-  //     display: block;
-  //     top: 50%;
-  //     left: 50%;
-  //     transform: translate(-50%, -50%);
-  //     font-size: 3vw;
-  //     width: 100%;
-  // }
+
 }
 
 .sc-project {
@@ -64,6 +95,14 @@
     height: 400vh;
     display: flex;
     flex-direction: column;
+
+    @include tablet {
+      height: 100%;
+    }
+
+    @include mobile {
+      overflow: hidden;
+    }
   }
 
   .project-area {
@@ -76,31 +115,22 @@
 
     .title-list {
       overflow: hidden;
-      // height: 22%;
       height: 20%;
+
+      @include desktop {
+        height: 17%;
+      }
 
       .title-item {
         display: flex;
         align-items: center;
-        padding: 1rem 0 1rem;
+        padding: 1rem 0;
         line-height: 0.975;
+        width: 100%;
+        height: 100%;
 
-        .p-title {
-          position: relative;
-          font-size: 3.2rem;
-          font-family: 'PP_Hatton';
-          // font-family: 'PP_Pangaia';
-          font-weight: 400;
-          font-style: italic;
-          letter-spacing: -0.1rem;
-          color: $main-black;
-
-          .title-num {
-            font-size: 1rem;
-            margin-bottom: 3rem;
-            // color: #484036;
-            vertical-align: top;
-          }
+        @include desktop {
+          padding: 1.5rem 0px;
         }
       }
     }
@@ -117,7 +147,7 @@
         left: 0;
         filter: blur(0px) brightness(1);
 
-        
+
         .con-img-box {
           display: block;
           filter: brightness(0.65);
@@ -147,17 +177,16 @@
           z-index: 3;
         }
 
-        .txt-desc{
+        .txt-desc {
           position: absolute;
-          /* color: #fff; */
           left: 0.8rem;
           bottom: 1.2rem;
           display: flex;
           align-items: center;
           gap: 10px;
-          
-          span{
-            font-size: 20px;
+
+          span {
+            font-size: 0.6rem;
             font-weight: 400;
             padding: 12px 15px;
             border-radius: 1000px;
@@ -165,35 +194,38 @@
             box-sizing: border-box;
             letter-spacing: -0.5px;
 
-            // color: #fff;
-            // border: 1px solid;
+            @include desktop {
+              font-size: 0.9rem;
+            }
           }
         }
-        .project-desc{
+
+        .project-desc {
           position: absolute;
           top: 1rem;
           right: 0.8rem;
           color: #fff;
           font-size: 0.65rem;
+
+          @include desktop {
+            font-size: 1rem;
+          }
         }
-        .link-code{
+
+        .link-code {
           position: absolute;
           bottom: 1.2rem;
           right: 0.8rem;
           color: #fff;
+
+          @include desktop {
+            font-size: 1.3rem;
+          }
+
+          @include mobile {
+            font-weight: 700;
+          }
         }
-
-
-        // .link-box {
-        //   display: flex;
-        //   flex-direction: column;
-        //   font-size: 0.85rem;
-        //   gap: 0.3rem;
-        //   align-items: flex-end;
-        //   font-family: $En-font;
-        //   font-style: italic;
-        //   padding-right: 0.1rem;
-        // }
 
         .video-box {
           display: block;
@@ -213,8 +245,124 @@
         }
       }
     }
+
+    @include tablet {
+      display: none;
+    }
+  }
+
+  .m-project-area {
+    display: none;
+
+    @include tablet {
+      display: block;
+    }
+
+    .mList {
+      margin-top: 8rem;
+
+      .mItem {
+
+        position: relative;
+        margin-bottom: 8rem;
+
+        @include mobile {
+          margin-bottom: 13rem;
+        }
+
+        .p-title {
+          font-size: 3.7rem;
+          line-height: 1.4;
+        }
+
+        .txt-desc {
+          display: flex;
+          align-items: center;
+          gap: 6px;
+
+          margin-bottom: 11px;
+
+          @include mobile {
+            gap: 4px;
+          }
+
+          span {
+            border: 1px solid #9d9d9d;
+            font-size: 1rem;
+            font-weight: 300;
+            padding: 4px 9px;
+            border-radius: 1000px;
+            box-sizing: border-box;
+            letter-spacing: -0.5px;
+
+            @include mobile {
+              font-size: 1.2rem;
+              padding: 4px 7px;
+            }
+          }
+        }
+
+        .project-desc {
+          font-size: 1.3rem;
+          text-align: right;
+          margin-top: 11px;
+        }
+
+        .link-code {
+          font-size: 1.6rem;
+          font-weight: 700;
+          position: absolute;
+          bottom: -2px;
+          left: 0;
+          display: inline-block;
+          letter-spacing: -0.5px;
+
+        }
+
+        .item_box {
+          overflow: hidden;
+
+          width: 100%;
+          height: 45vh;
+
+          .item {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+
+          @include mobile {
+            height: 63vh;
+          }
+        }
+
+      }
+    }
   }
 }
+
+.p-title {
+  position: relative;
+  font-size: 3.2rem;
+  font-family: 'PP_Hatton';
+  // font-family: 'PP_Pangaia';
+  font-weight: 400;
+  font-style: italic;
+  letter-spacing: -0.1rem;
+  color: $main-black;
+
+  @include desktop {
+    font-size: 4rem;
+  }
+
+  .title-num {
+    font-size: 1.5rem;
+    margin-bottom: 3rem;
+    vertical-align: top;
+  }
+}
+
+
 
 .sub-project {
   margin-top: 6rem;
@@ -224,7 +372,19 @@
     grid-template-columns: repeat(6, 1fr);
     gap: 20px;
 
+    @include tablet {
+      display: flex;
+      flex-direction: column;
+      gap: 4rem;
+    }
+
+    @include mobile {
+      gap: 9rem;
+    }
+
     .project-list {
+      position: relative;
+
       .project-item {
         position: relative;
         display: block;
@@ -233,16 +393,23 @@
         .item-box {
           height: 17rem;
 
+          @include tablet {
+            height: 25rem;
+          }
+
+          @include mobile {
+            height: 40rem;
+          }
+
           img {
             width: 100%;
             height: 100%;
             object-fit: cover;
           }
 
-          video{
+          video {
             width: 100%;
             height: 100%;
-            // height: 90vh;
             object-fit: cover;
             background-position: 50%;
             background-size: cover;
@@ -255,22 +422,65 @@
           color: #fff;
           font-size: 0.5rem;
           z-index: 9;
+
+          @include mobile {
+            padding: 20px 15px;
+          }
         }
 
         .txt-desc-top {
           top: 0;
+          width: 100%;
+          background: linear-gradient(#060606, #ffffff00);
+
+          @include desktop {
+            font-size: 0.8rem;
+          }
+
+          @include tablet {
+            font-size: 1.2rem;
+          }
+
+          @include mobile {
+            font-size: 1.8rem;
+          }
         }
 
         .txt-desc-bott {
           bottom: 0;
+          display: flex;
+          gap: 7px;
+          letter-spacing: -0.5px;
+
+          @include desktop {
+            gap: 5px;
+          }
+
+          @include mobile {
+            padding-right: 0;
+          }
 
           span {
             font-size: 0.4rem;
-            border-radius: 21px;
+            border-radius: 1.6rem;
             font-weight: 400;
             padding: 12px 14px;
             backdrop-filter: blur(20px);
             background-color: rgb(89 89 89 / 75%);
+
+            @include desktop {
+              font-size: 0.6rem;
+              padding: 10px 11px;
+            }
+
+            @include tablet {
+              font-size: 0.9rem;
+            }
+
+            @include mobile {
+              font-size: 1.4rem;
+              padding: 6px 7px;
+            }
           }
         }
 
@@ -293,8 +503,6 @@
             font-weight: 500;
             font-size: 7vw;
             color: #fff;
-
-            span {}
           }
         }
 
@@ -311,6 +519,37 @@
         }
       }
 
+      .ic_velog {
+        position: absolute;
+        display: block;
+        right: 20px;
+        bottom: 20px;
+        fill: #e0e0e0;
+        transition: fill 0.2s;
+
+        @include desktop {
+          bottom: 25px;
+        }
+
+        @include mobile {
+          bottom: 21px;
+        }
+
+        svg {
+          width: 35px;
+          height: 35px;
+
+          @include desktop {
+            width: 24px;
+            height: 24px;
+          }
+        }
+
+        &:hover {
+          fill: #20c393;
+        }
+      }
+
       @keyframes rolling {
         0% {
           transform: translateX(0%);
@@ -323,7 +562,11 @@
     }
 
     .project-list-large {
-      grid-column: span 4
+      grid-column: span 4;
+
+      @include desktop {
+        max-height: 399.5px;
+      }
     }
 
     .project-list-small {
@@ -334,44 +577,81 @@
 
 .sc-ing {
   margin-top: 5rem;
-  .content-wrap{
-    &>.desc{
+
+  @include tablet {
+    margin-top: 10rem;
+  }
+
+  @include mobile {
+    margin-bottom: 20rem;
+  }
+
+  .content-wrap {
+    &>.desc {
       font-size: 0.5rem;
       padding: 0.5rem 2vw;
       color: #545758;
       text-align: right;
+
+      @include desktop {
+        font-size: 0.75rem;
+      }
+
+      @include tablet {
+        font-size: 0.9rem;
+      }
+
+      @include mobile {
+        font-size: 1.4rem;
+        padding: 1rem 4vw;
+      }
     }
+
     .content-list {
       border-top: 1px solid rgb(95 94 94 / 56%);
-  
+
       .content-item {
-  
+
         border-bottom: 1px solid rgb(95 94 94 / 56%);
-  
+
         a {
-          display: grid;
-          grid-template-columns: 20fr 40fr;
+          display: flex;
           width: 100%;
           padding: 1.5rem 0 1.7rem 4.5rem;
           transition: all .3s cubic-bezier(.7, 0, .3, 1);
           // opacity: .33;
           opacity: .75;
-  
-          // color: #ACB4B8;
+
+          @include tablet {
+            flex-direction: column;
+            padding: 1.5rem 0 1.7rem 5.5rem;
+          }
+
           &:hover {
             background: linear-gradient(90deg, rgb(172 181 183 / 46%) 50%, transparent 100%);
             padding: 1.5rem 0 1.7rem 3rem;
             opacity: 1;
-            // transform: translateX(-20px);
           }
-  
+
           .title {
+            width: 34%;
             font-size: clamp(1.6rem, 1.6vw, 2rem);
             position: relative;
-            // font-size: 45px;
             font-weight: bold;
-  
-            // text-transform: uppercase;
+
+            @include desktop {
+              width: 30%;
+            }
+
+            @include tablet {
+              font-size: 2.5rem;
+            }
+
+            @include mobile {
+              font-size: 3rem;
+              width: 100%;
+            }
+
             i {
               font-size: 0.5rem;
               position: absolute;
@@ -380,6 +660,21 @@
               letter-spacing: .04em;
               font-weight: 500;
               line-height: 1.2;
+
+              @include desktop {
+                font-size: 0.6rem;
+                left: -1.5rem;
+              }
+
+              @include tablet {
+                font-size: 0.8rem;
+                left: -2rem;
+              }
+
+              @include mobile {
+                font-size: 1.2rem;
+                left: -3rem;
+              }
             }
           }
         }
@@ -396,6 +691,21 @@
       line-height: 1.2;
       font-size: 0.65rem;
       font-weight: 500;
+
+      @include desktop {
+        margin-top: 1vh;
+        font-size: 0.82rem;
+      }
+
+      @include tablet {
+        font-size: 1rem;
+      }
+
+      @include mobile {
+        margin-top: 0.2vh;
+        font-size: 1.5rem;
+        line-height: 1.5;
+      }
     }
 
     .hash {
@@ -408,6 +718,18 @@
       font-size: 0.5rem;
       margin-top: 0.2rem;
       opacity: 0.5;
+
+      @include desktop {
+        font-size: 0.7rem;
+      }
+
+      @include tablet {
+        font-size: 0.9rem;
+      }
+
+      @include tablet {
+        font-size: 1.4rem;
+      }
     }
   }
 }
@@ -415,69 +737,98 @@
 .sc-learn {
   margin-top: 5rem;
   display: flex;
-      flex-direction: column;
-      height: 100vh;
-      overflow: hidden;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
 
   .sc-title {
     margin-bottom: 2.5rem;
+
+    @include mobile {
+      margin-bottom: 8rem;
+    }
   }
 
   .slider {
     display: flex;
-        flex: 1;
-        align-items: center;
+    flex: 1;
+    align-items: center;
     background: #ecece4;
 
-    // @include desktop{
-    //   height: 45vw;
-    // }
-    // @include tablet{
-    //   height: 70vw;
-    // }
-    // @include mobile{
-    //   height: 90vw;
-    // }
+    @include desktop {
+      height: 43vw;
+    }
+
+    @include tablet {
+      height: 70vw;
+    }
+
+    @include mobile {
+      height: 60vw;
+    }
+
     .slider-list {
       display: flex;
-          gap: 30px;
-          padding: 0 50px;
-          min-height: 300px;
+      gap: 30px;
+      padding: 0 50px;
+      min-height: 300px;
+
+      @include desktop {
+        padding: 0 2vw;
+      }
+
+      @include mobile {
+        padding: 0 5vw;
+      }
 
       .slider-item {
         display: flex;
         align-items: center;
         width: 45vw;
-        // width: 31vw;
         background: #fff;
         color: #000;
         padding: 30px;
         border: 1px solid #2f2f2f;
         border-radius: 10px;
-        // padding: 1.5rem;
         box-sizing: border-box;
-        // overflow: hidden;
         background: #fff;
 
-        @include desktop{
-          // width: 31%;
+        @include desktop {
+          flex-direction: column;
+          padding: 20px;
+          width: 42vw;
         }
-        // @include tablet{
-        //   width: 75%;
-        //   padding: 1.5rem;
-        // }
-        // @include mobile{
-        //   width: 80%;
-        //   padding: 1.5rem;              
-        // }
+
+        @include tablet {
+          width: 63vw;
+        }
+
+        @include mobile {
+          width: 80vw;
+        }
+
         .slide-top {
           width: 45%;
+
+          @include desktop {
+            width: 100%;
+          }
+
           .slide-img-box {
             position: relative;
             width: 100%;
-            // height: 220px;
             padding-bottom: 61%;
-            // overflow: hidden;
+            border: 1px solid #8a8b8b;
+
+            @include desktop {
+              padding-bottom: 53%;
+
+              box-sizing: border-box;
+            }
+
+            @include mobile {
+              padding-bottom: 60%;
+            }
 
             img {
               //   height: 2.5rem;
@@ -491,38 +842,45 @@
           }
 
         }
-      
+
         .slide-bottom {
-          // font-family: $preten-light;
-          // border-top: 1px solid #2f2f2f;
-          font-size: 0.9vw;
+          font-size: 0.45rem;
           flex: 1;
           overflow: hidden;
           box-sizing: border-box;
 
           padding: 0 20px;
-          //   @include desktop{
-          //     font-size: 1.5vw;
-          //   }
-          //   @include tablet {
-          //     font-size: 3vw;
-          //   }
-          //   @include mobile {
-          //     font-size: 3vw;
-          //   }
+
+          @include desktop {
+            padding: 0;
+            font-size: 0.7rem;
+            margin-top: 15px;
+          }
+
+          @include tablet {
+            font-size: 1.2rem;
+          }
+
+          @include mobile {
+            font-size: 1.7rem;
+          }
 
           .slide-title {
-            font-size: 1.7vw;
+            font-size: 0.79rem;
+            font-weight: 500;
             text-transform: uppercase;
-            //   @include desktop{
-            //     font-size: 3.5vw;
-            //   }
-            //   @include tablet {
-            //     font-size: 4.5vw;
-            //   }
-            //   @include mobile {
-            //     font-size: 4vw;
-            //   }
+
+            @include desktop {
+              font-size: 1.3rem;
+            }
+
+            @include tablet {
+              font-size: 1.5rem;
+            }
+
+            @include mobile {
+              font-size: 2.5rem;
+            }
           }
         }
       }
@@ -531,9 +889,22 @@
 
   .desc {
     font-size: 0.5rem;
-    // margin-left: auto;
     padding: 1rem 2vw;
     background: #ecece4;
+
+    @include desktop {
+      font-size: 0.8rem;
+    }
+
+    @include tablet {
+      font-size: 1.2rem;
+      padding-bottom: 2rem;
+    }
+
+    @include mobile {
+      font-size: 1.9rem;
+      padding: 1rem 5vw 2rem;
+    }
   }
 
   .pan-wrap {
