--- a/asset/scss/utils/_var.scss
+++ b/asset/scss/utils/_var.scss
@@ -4,4 +4,7 @@ $preten-light : 'Pretendard-Light', sans-serif;
 $En-font:'Roboto', sans-serif;
 
 $main-color : #ecece4;
-$main-black : #484036;
+// $main-black : #484036;
+$main-brown : #484036;
+$main-black : #212529;
+
